# pairs-trading

./: .coverage  .gitignore  README.md  conftest.py  coverage.xml  pyproject.toml
.github/workflows/: ci.yml
pairs_trading.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pairs_trading/backtest/: engine.py
pairs_trading/cointegration/: engle_granger.py  johansen.py
pairs_trading/data/: loader.py
pairs_trading/metrics/: performance.py
pairs_trading/models/: ou_process.py
pairs_trading/signals/: zscore.py
pairs_trading/validation/: walk_forward.py
pairs_trading/visualisation/: plots.py
scripts/: run_analysis.py
tests/integration/: test_pipeline.py
tests/unit/: test_backtest.py  test_data_loader.py  test_engle_granger.py  test_johansen.py  test_metrics.py  test_ou_process.py  test_visualisation.py  test_zscore.py
